<!--
  ~ Copyright 2020 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<resources>
    <string name="content_description_google_translate_attribution">Powered by Google Translate</string>
    <string name="overlay_help">Center text in box</string>
    <string name="downloading_model_files">Downloading model files…</string>
    <string name="app_name">300</string>
    <string name="input">source word</string>
    <string name="output">processed word</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="answer">Answer</string>
    <string name="button1">confirm</string>
    <string name="button2">Add to reviewList</string>
    <string name="button3">Remove from the list</string>
    <string name="button4">answer</string>
    <string name="button5">next</string>
    <string name="button6">quit</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="submit">submit</string>
    <string name="function1">Translate</string>
    <string name="function2">Review List</string>
    <string name="function3">Review</string>
    <string name="function4">Scan</string>
    <string name="page1">Page1</string>
    <string name="text">Test</string>
</resources>
