<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:showDividers="middle"
    android:dividerPadding="10dp"
    tools:context="com.example.a300.Home" >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/function1"
        android:onClick="function1"
        android:textSize="30dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/function2"
        android:onClick="function2"
        android:textSize="30dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/function3"
        android:onClick="function3"
        android:textSize="30dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/function4"
        android:onClick="function4"
        android:textSize="30dp"
        />
</LinearLayout>